overflow fixed

--- a/src/index.css
+++ b/src/index.css
@@ -39,6 +39,11 @@
 }
 
 @layer base {
+html, body {
+  margin: 0;
+  padding: 0;
+}
+
   html { scroll-behavior: smooth; }
 
   body {
